Adding new paragraph

--- a/wiki-page.html
+++ b/wiki-page.html
@@ -13,6 +13,7 @@
         The brown bear (Ursus arctos) is native to parts of northern Eurasia and North America. Its conservation status is currently Least Concern.
         There are many subspecies within the brown bear species, including the Atlas bear and the Himalayan brown bear.
     </p>
+    <p>Brown bears are often not fully brown. They have long, thick fur, with a moderately long mane at the back of the neck which varies somewhat across the types</p>
     <a href="https://en.wikipedia.org/wiki/Brown_bear">Learn More</a>
     <p>Here are some bear species</p>
     <ul>
