--- a/to-do-list.html
+++ b/to-do-list.html
@@ -20,6 +20,8 @@
             <li>Renew web hosting account and domain name</li>
             <li>Learn something new</li>
             <li>Update project blog</li>
+            <li>Finish My homeworks</li>
+            <li>Start on my new Project</li>
         </ol>
     </div>
 </body>
