--- a/wiki-page.html
+++ b/wiki-page.html
@@ -8,7 +8,7 @@
     <!-- Abdulaziz bin saif  442102616 -->
 </head>
 <body>
-    <h1>The Brown Bear</h1>
+    <h1 style="color: crimson;">The Brown Bear</h1>
     <p>
         The brown bear (Ursus arctos) is native to parts of northern Eurasia and North America. Its conservation status is currently Least Concern.
         There are many subspecies within the brown bear species, including the Atlas bear and the Himalayan brown bear.
