Change date and time in to-do-list

--- a/to-do-list.html
+++ b/to-do-list.html
@@ -12,7 +12,8 @@
 <body>
     <div class="my-list">
         <h1>Today's to do list</h1>
-        <p>Monday, Septemper 19th</p>
+        <p>Monday, April 3rd</p>
+        <p>12:01 PM</p>
         <ol>
             <li>Write a blog post</li>
             <li>Go to the bank</li>
